Hero section bg - scrollbar - header hover fixed

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,313 +1,16 @@
-/* #banner-section {
+#banner-section {
   position: relative;
-  padding-top: 10px;
+  padding-top: 0 px;
   background-image: url(/public/banner-bg.png);
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  vertical-align: bottom;
-  border-style: none;
-}
-
-#banner-section .banner-content {
-  position: relative;
-}
-
-.container,
-.container-fluid,
-.container-lg,
-.container-md,
-.container-sm,
-.container-xl {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-@media (min-width: 1200px) {
-  .container,
-  .container-lg,
-  .container-md,
-  .container-sm,
-  .container-xl {
-    max-width: 1140px;
-  }
-}
-
-@media (min-width: 992px) {
-  .container,
-  .container-lg,
-  .container-md,
-  .container-sm {
-    max-width: 960px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container,
-  .container-md,
-  .container-sm {
-    max-width: 720px;
-  }
-}
-
-@media (min-width: 576px) {
-  .container,
-  .container-sm {
-    max-width: 540px;
-  }
-}
-
-@media (min-width: 992px) {
-  .col-lg-10 {
-    -ms-flex: 0 0 83.333333%;
-    flex: 0 0 83.333333%;
-    max-width: 83.333333%;
-  }
-}
-
-#banner-section .banner-content .main-content {
-  position: relative;
-}
-
-#banner-section .banner-content .main-content .item.one {
-  top: 20%;
-  left: 70px;
-}
-
-#banner-section .banner-content .main-content .item {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  background-color: rgb(255, 255, 255);
-  border-radius: 38px;
-  padding: 17px 28px;
-}
-
-#banner-section .banner-content .main-content .item.two {
-  bottom: 25%;
-  box-shadow: 2.3px 21.879px 79px 0px rgb(219 210 255 / 80%);
-}
-
-#banner-section .banner-content .main-content .item {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  background-color: rgb(255, 255, 255);
-  border-radius: 38px;
-  padding: 17px 28px;
-}
-
-#banner-section .banner-content .main-content .item.three {
-  top: 20%;
-  right: 50px;
-}
-
-.cool {
-  margin-left: 120px;
-}
-
-#banner-section .banner-content .main-content .item {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  background-color: rgb(255, 255, 255);
-  border-radius: 38px;
-  padding: 17px 28px;
-}
-
-#banner-section .banner-content .main-content .item.four {
-  bottom: 25%;
-  right: -20px;
-  box-shadow: 2.3px 21.879px 79px 0px rgb(219 210 255 / 80%);
-}
-#banner-section .banner-content .main-content .item {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  background-color: rgb(255, 255, 255);
-  border-radius: 38px;
-  padding: 17px 28px;
-}
-
-.row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
-#banner-section .right-area {
-  position: relative;
-}
-
-#banner-section .right-area .download-area {
-  display: contents;
-}
-
-*,
-::after,
-::before {
-  box-sizing: border-box;
-}
-.text-center {
-  text-align: center !important;
-}
-
-#banner-section .right-area .download-area {
-  display: contents;
-}
-#banner-section .right-area .download {
-  font-size: 20px;
-  font-weight: 500;
-  padding: 12px 25px;
-  color: rgb(29, 12, 64);
-  line-height: 1.4;
-  border-radius: 35px;
-  background-color: var(--body-color);
-  box-shadow: 1.463px 13.923px 57px 0px rgb(247 6 115 / 35%);
-  transform: translateY(-110px);
-}
-
-.row {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
-}
-
-#banner-section .text-area h5 {
-  font-size: 18px;
-  color: #8c3a32;
-  line-height: 1.556;
-}
-#banner-section .text-area h2 {
-  font-size: 78px;
-  color: rgb(49, 21, 103);
-  font-family: "GlacialIndifference";
-  font-weight: 800;
-  line-height: 88px;
-  margin: 0 0 40px 0;
-}
-#banner-section .text-area h2 span {
-  color: #8c3a32;
-  font-weight: 800;
-  font-family: "GlacialIndifference";
-  font-size: inherit;
-}
-span {
-  display: inline-block;
-}
-
-#banner-section .text-area .btn-area .cmn-btn {
-  margin-right: 30px;
-}
-
-.cmn-btn {
-  position: relative;
-  color: rgb(255, 255, 255);
-  font-size: 16px;
-  font-weight: 600;
-  text-transform: uppercase;
-  -webkit-transition: all 0.6s;
-  transition: all 0.6s;
-  background-image: linear-gradient(
-    45deg,
-    rgb(247, 112, 98) 0%,
-    rgb(254, 81, 150) 100%
-  );
-  border-radius: 50px;
-  padding: 12px 30px;
-  z-index: 1;
-  overflow: hidden;
-  transition: 0.35s ease;
-}
-
-a,
-a:focus,
-a:hover {
-  text-decoration: none;
-  outline: none;
-  color: rgb(255, 255, 255);
-}
-
-a {
-  display: inline-block;
-  font-family: var(--body-font);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 28px;
-  color: #007bff;
-  text-decoration: none;
-  background-color: transparent;
-}
-
-#banner-section .text-area .btn-area .cmn-btn-second {
-  color: rgb(49, 21, 103);
-  text-transform: uppercase;
-}
-
-.cmn-btn-second {
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 500;
-}
-
-a,
-a:focus,
-a:hover {
-  text-decoration: none;
-  outline: none;
-  color: rgb(255, 255, 255);
-}
-
-#banner-section .text-area .btn-area .cmn-btn-second .btn-icon {
-  background-color: #311567;
-}
-.btn-icon {
-  position: relative;
-  content: "";
-  background-color: white;
-  top: -5px;
-  left: 5px;
-  height: 1px;
-  width: 40px;
-  display: inline-block;
-  transition: all 0.7s;
-}
-
-span {
-  display: inline-block;
-}
-
-p,
-span,
-li {
-  margin: 0;
-  font-family: var(--body-font);
-  font-size: 18px;
-  font-weight: 400;
-  color: rgb(71 47 125);
-  line-height: 1.556;
-} */
-
-/* --------------------------------------------------------------------------------------------------------- */
-
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   #banner-section {
     background-size: 150% 100%;
   }
-}
+} */
 
 @media (max-width: 767px) {
   #banner-section {
@@ -318,15 +21,8 @@ li {
 @media (max-width: 991px) {
   #banner-section {
     padding-top: 200px;
+    background-size: 140% 65%;
   }
-}
-
-#banner-section {
-  position: relative;
-  padding-top: 0 px;
-  background-image: url(/public/banner-bg.png);
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
 }
 
 #banner-section .banner-content {
@@ -350,8 +46,8 @@ li {
 }
 
 #banner-section .banner-content .main-content .item.one {
-  top: 20%;
-  left: 70px;
+  top: 25%;
+  left: 130px;
 }
 
 @media (max-width: 991px) {
@@ -414,8 +110,8 @@ h6 {
 }
 
 #banner-section .banner-content .main-content .item.three {
-  top: 20%;
-  right: 50px;
+  top: 25%;
+  right: 105px;
 }
 
 #banner-section .banner-content .main-content .item.four {
@@ -599,5 +295,15 @@ li {
 @media (max-width: 991px) {
   #banner-section .banner-content .main-content {
     margin-top: -300px;
+  }
+}
+
+.right-img {
+  margin-top: -111px !important;
+}
+
+@media (max-width: 991px) {
+  .right-img {
+    margin-top: 30px !important;
   }
 }
