--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,6 +7,10 @@
   margin-bottom: -7px;
 }
 
+/* .navbar-nav {
+  padding-left: 44px;
+} */
+
 *,
 ::after,
 ::before {
@@ -68,8 +72,8 @@
   }
 }
 
-.dropdown-item a:hover {
-}
+/* .dropdown-item a:hover {
+} */
 
 .dropdown-menu {
   min-width: 14rem;
